--- a/themes/school-site-simple/templates/article.html
+++ b/themes/school-site-simple/templates/article.html
@@ -3,10 +3,13 @@
 {% block content %}
 <section id="content" class="body">
   <article>
-    <header>
+    <header class="entry-header">
       <h1 class="entry-title">
         <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
            title="Permalink to {{ article.title|striptags }}">{{ article.title}}</a></h1>
+       {% if article.subtitle %}
+       <h3 class="entry-subtitle">{{article.subtitle}}</h3>
+       {% endif %}
       {% include 'twitter.html' %}
     </header>
 
