--- a/themes/school-site-simple/static/css/marco.css
+++ b/themes/school-site-simple/static/css/marco.css
@@ -12,6 +12,10 @@ body {
 
 a {
   text-decoration: none;
+  -webkit-transition-duration: .3s;
+  -moz-transition-duration: .3s;
+  -ms-transition-duration: .3s;
+  transition-duration: .3s;
 }
 
 header#banner a:link, header#banner a:visited {
@@ -100,7 +104,7 @@ header#banner li {
 .body h3 {font-size: 18px;}
 .body h4 {font-size: 16px;}
 
-.body h1, .body h2, .body h3, .body h4 {
+.body h1, .body h2, .body h3, .body h4, .body .headline{
   font-family: 'Bree Serif', serif;
   line-height: 1.6;
   font-weight: normal;
