--- a/themes/school-site-simple/templates/base.html
+++ b/themes/school-site-simple/templates/base.html
@@ -88,6 +88,7 @@
   </footer><!-- /#contentinfo -->
 
 {% include 'analytics.html' %}
+{% include 'statcounter.html' %}
 {% include 'piwik.html' %}
 {% include 'disqus_script.html' %}
 </body>
