Modified statcounter comment

--- a/themes/school-site-simple/templates/statcounter.html
+++ b/themes/school-site-simple/templates/statcounter.html
@@ -1,5 +1,5 @@
 {% if STATCOUNTER %}
-    <!-- Start of StatCounter Code for Default Guide -->
+    <!-- Start of StatCounter Code -->
     <script type="text/javascript">
       var sc_project={{ STATCOUNTER[0] }};
       var sc_invisible=1;
@@ -14,5 +14,5 @@
         </a>
       </div>
     </noscript>
-    <!-- End of StatCounter Code for Default Guide -->
+    <!-- End of StatCounter Code -->
 {% endif %}
